# env

./: .env.example  .gitignore  INSTRUCTIONS.md  NEW_FEATURES.md  PROJECT_SUMMARY.md  QUICK_REFERENCE.md  README.md  beyond-env.md  env-readme.md  exported.json
.qoder/: USAGE_GUIDE.md
.qoder/agents/: browser-automation.md  code-review.md  env-validator.md
.qoder/skills/: api-development.md  git-commit.md  rust-project-management.md
env_manager/: Cargo.toml  README.md
env_manager/src/: lib.rs  main.rs  validator.rs
