[package]
name = "env_manager"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
yaml-rust = "0.4"
regex = "1.10"
thiserror = "1.0"
colored = "2.1"
chrono = "0.4"
base64 = "0.21"
aes = "0.8"
sha2 = "0.10"
